Spring boot upgrade to the newest version